<?xml version="1.0"?>
<package format="2">
  <name>dyno_hsr_capabilities</name>
  <version>0.0.0</version>
  <description>The dyno_hsr_capabilities package</description>

  <maintainer email="samuellindgren91@gmail.com">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <capability_interface>
      interfaces/RobotStatePublisher.yaml
    </capability_interface>

    <capability_provider>
      providers/robot_state_publisher.yaml
    </capability_provider>

    <capability_interface>
      interfaces/MobileBase.yaml
    </capability_interface>

    <capability_provider>
      providers/mobile_base.yaml
    </capability_provider>

    <capability_interface>
      interfaces/Localization.yaml
    </capability_interface>

    <capability_provider>
      providers/cartographer_localization_2d.yaml
    </capability_provider>

    <capability_provider>
      providers/cartographer_localization_3d.yaml
    </capability_provider>

    <capability_interface>
      interfaces/Navigation.yaml
    </capability_interface>

    <capability_provider>
      providers/eband_navigation.yaml
    </capability_provider>

    <capability_interface>
      interfaces/Diagnostics.yaml
    </capability_interface>

    <capability_provider>
      providers/diagnostics.yaml
    </capability_provider>
  </export>

</package>
