<?xml version="1.0"?>
<package format="2">
  <name>dyno_hsr_detection</name>
  <version>0.0.0</version>
  <description>The dyno_hsr_detection package</description>

  <maintainer email="samuellindgren91@gmail.com">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rostest</depend>
  <depend>rosunit</depend>

  <depend>darknet_ros</depend>
  <depend>object_recognition_core</depend>

  <export>

  </export>
</package>
