<?xml version="1.0"?>
<package format="2">
  <name>dyno_hsr_localization</name>
  <version>0.0.0</version>
  <description>The dyno_hsr_localization package</description>

  <maintainer email="samuellindgren91@gmail.com">Samuel Lindgren</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>

  <depend>cartographer_ros</depend>
  <depend>cartographer_turtlebot</depend>

  <export>
  </export>
</package>
