<?xml version="1.0"?>
<package format="2">
  <name>dyno_hsr_sigverse</name>
  <version>0.0.0</version>
  <description>The dyno_hsr_gazebo package</description>

  <maintainer email="samuellindgren91@gmail.com">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hsr_description</depend>

  <depend>rostest</depend>
  <depend>rosunit</depend>

  <depend>sigverse_ros_package</depend>

  <export>

  </export>
</package>
